--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,11 @@
             <artifactId>lombok</artifactId>
             <version>1.18.16</version>
         </dependency>
-
+        <!--redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 
