--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,16 @@
             <artifactId>easypoi-base</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-web</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-annotation</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
 
