--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
             <artifactId>jfreechart</artifactId>
             <version>1.0.19</version>
         </dependency>
-
+        <!-- easyPoi-->
         <dependency>
             <groupId>cn.afterturn</groupId>
             <artifactId>easypoi-base</artifactId>
@@ -92,8 +92,13 @@
             <artifactId>easypoi-annotation</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <!-- easyExcel-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.1.6</version>
+        </dependency>
     </dependencies>
-
 
 
 
